src/main/antlr/ZephyrParser.java
// Generated from src/main/antlr/ZephyrParser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ZephyrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET=1, MUT=2, EXTERNAL=3, IF=4, ELSE=5, WHILE=6, FOR=7, IMPORT=8, WITH=9, 
		AS=10, IS=11, TRUE=12, FALSE=13, INT_TYPE=14, FLOAT_TYPE=15, CHAR_TYPE=16, 
		STRING_TYPE=17, BOOLEAN_TYPE=18, VOID_TYPE=19, SEMICOLON=20, LPAREN=21, 
		RPAREN=22, LBRACKET=23, RBRACKET=24, LBRACE=25, RBRACE=26, COLON=27, COMMA=28, 
		DOT=29, PIPE=30, QUOTE=31, SLASH=32, APOSTROPHE=33, NEWLINE=34, LIST_START=35, 
		MAP_START=36, TUPLE_START=37, OBJECT_START=38, ARROW=39, IDENT=40, ASSIGN_NONE=41, 
		ASSIGN_PLUS=42, ASSIGN_MINUS=43, ASSIGN_TIMES=44, ASSIGN_DIVIDE=45, ASSIGN_MODULUS=46, 
		ASSIGN_POWER=47, ASSIGN_AND=48, ASSIGN_OR=49, PLUS_OP=50, MINUS_OP=51, 
		TIMES_OP=52, MODULUS_OP=53, POWER_OP=54, EQUALS_OP=55, NOT_EQUALS_OP=56, 
		LESS_THAN_OP=57, LESS_THAN_EQUALS_OP=58, GREATER_THAN_OP=59, GREATER_THAN_EQUALS_OP=60, 
		AND_OP=61, OR_OP=62, IN_OP=63, NOT_IN_OP=64, RANGE_OP=65, RANGE_INC_OP=66, 
		NOT_OP=67, INCREMENT=68, DECREMENT=69, WHITESPACE=70, COMMENT_LINE=71, 
		COMMENT_BLOCK=72, FLOAT=73, DECIMAL=74, BINARY=75, OCTAL=76, HEXADECIMAL=77, 
		EXPONENT=78, TEXT_LITERAL_CHAR=79, CHAR=80, STRING=81, IMPORT_FILE_REGULAR=82, 
		IMPORT_STD=83, IMPORT_LIB=84;
	public static final int
		RULE_singleExpr = 0, RULE_module = 1, RULE_topLevel = 2, RULE_expr = 3, 
		RULE_term = 4, RULE_float = 5, RULE_integer = 6, RULE_intNum = 7, RULE_boolean = 8, 
		RULE_list = 9, RULE_map = 10, RULE_tuple = 11, RULE_object = 12, RULE_mapEntry = 13, 
		RULE_objectField = 14, RULE_closure = 15, RULE_closureParam = 16, RULE_ident = 17, 
		RULE_call = 18, RULE_let = 19, RULE_external = 20, RULE_assignment = 21, 
		RULE_assignmentOp = 22, RULE_memberAccess = 23, RULE_indexAccess = 24, 
		RULE_if = 25, RULE_while = 26, RULE_for = 27, RULE_importExpr = 28, RULE_importIdent = 29, 
		RULE_importSpecifier = 30, RULE_importFilePart = 31, RULE_importFileRegular = 32, 
		RULE_cast = 33, RULE_typeCheck = 34, RULE_codeBlock = 35, RULE_parens = 36, 
		RULE_type = 37, RULE_typeLiteral = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"singleExpr", "module", "topLevel", "expr", "term", "float", "integer", 
			"intNum", "boolean", "list", "map", "tuple", "object", "mapEntry", "objectField", 
			"closure", "closureParam", "ident", "call", "let", "external", "assignment", 
			"assignmentOp", "memberAccess", "indexAccess", "if", "while", "for", 
			"importExpr", "importIdent", "importSpecifier", "importFilePart", "importFileRegular", 
			"cast", "typeCheck", "codeBlock", "parens", "type", "typeLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "'mut'", "'external'", "'if'", "'else'", "'while'", "'for'", 
			"'import'", "'with'", "'as'", "'is'", "'true'", "'false'", "'int'", "'float'", 
			"'char'", "'string'", "'boolean'", "'void'", "';'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "':'", "','", "'.'", "'|'", "'\"'", "'/'", "'''", 
			"'\\n'", "'#['", "'#{'", "'#('", "'@{'", "'->'", null, "'='", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'**='", "'&&='", "'||='", "'+'", "'-'", 
			"'*'", "'%'", "'**'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", 
			"'||'", "'in'", "'!in'", "'..'", "'..='", "'!'", "'++'", "'--'", null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'std'", "'lib'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LET", "MUT", "EXTERNAL", "IF", "ELSE", "WHILE", "FOR", "IMPORT", 
			"WITH", "AS", "IS", "TRUE", "FALSE", "INT_TYPE", "FLOAT_TYPE", "CHAR_TYPE", 
			"STRING_TYPE", "BOOLEAN_TYPE", "VOID_TYPE", "SEMICOLON", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COLON", "COMMA", "DOT", 
			"PIPE", "QUOTE", "SLASH", "APOSTROPHE", "NEWLINE", "LIST_START", "MAP_START", 
			"TUPLE_START", "OBJECT_START", "ARROW", "IDENT", "ASSIGN_NONE", "ASSIGN_PLUS", 
			"ASSIGN_MINUS", "ASSIGN_TIMES", "ASSIGN_DIVIDE", "ASSIGN_MODULUS", "ASSIGN_POWER", 
			"ASSIGN_AND", "ASSIGN_OR", "PLUS_OP", "MINUS_OP", "TIMES_OP", "MODULUS_OP", 
			"POWER_OP", "EQUALS_OP", "NOT_EQUALS_OP", "LESS_THAN_OP", "LESS_THAN_EQUALS_OP", 
			"GREATER_THAN_OP", "GREATER_THAN_EQUALS_OP", "AND_OP", "OR_OP", "IN_OP", 
			"NOT_IN_OP", "RANGE_OP", "RANGE_INC_OP", "NOT_OP", "INCREMENT", "DECREMENT", 
			"WHITESPACE", "COMMENT_LINE", "COMMENT_BLOCK", "FLOAT", "DECIMAL", "BINARY", 
			"OCTAL", "HEXADECIMAL", "EXPONENT", "TEXT_LITERAL_CHAR", "CHAR", "STRING", 
			"IMPORT_FILE_REGULAR", "IMPORT_STD", "IMPORT_LIB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ZephyrParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZephyrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SingleExprContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ZephyrParser.EOF, 0); }
		public SingleExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterSingleExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitSingleExpr(this);
		}
	}

	public final SingleExprContext singleExpr() throws RecognitionException {
		SingleExprContext _localctx = new SingleExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_singleExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			expr(0);
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ZephyrParser.EOF, 0); }
		public List<TopLevelContext> topLevel() {
			return getRuleContexts(TopLevelContext.class);
		}
		public TopLevelContext topLevel(int i) {
			return getRuleContext(TopLevelContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ZephyrParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ZephyrParser.SEMICOLON, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ZephyrParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ZephyrParser.NEWLINE, i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LET || _la==EXTERNAL) {
				{
				setState(81);
				topLevel();
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(82);
						_la = _input.LA(1);
						if ( !(_la==SEMICOLON || _la==NEWLINE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(83);
						topLevel();
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON || _la==NEWLINE) {
					{
					setState(89);
					_la = _input.LA(1);
					if ( !(_la==SEMICOLON || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
			}

			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelContext extends ParserRuleContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public ExternalContext external() {
			return getRuleContext(ExternalContext.class,0);
		}
		public TopLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitTopLevel(this);
		}
	}

	public final TopLevelContext topLevel() throws RecognitionException {
		TopLevelContext _localctx = new TopLevelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevel);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				let();
				}
				break;
			case EXTERNAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				external();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmentExprContext extends ExprContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignmentExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterAssignmentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitAssignmentExpr(this);
		}
	}
	public static class IntegerExprContext extends ExprContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public IntegerExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterIntegerExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitIntegerExpr(this);
		}
	}
	public static class ObjectExprContext extends ExprContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ObjectExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterObjectExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitObjectExpr(this);
		}
	}
	public static class CastExprContext extends ExprContext {
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
		public CastExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterCastExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitCastExpr(this);
		}
	}
	public static class TypeCheckExprContext extends ExprContext {
		public TypeCheckContext typeCheck() {
			return getRuleContext(TypeCheckContext.class,0);
		}
		public TypeCheckExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterTypeCheckExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitTypeCheckExpr(this);
		}
	}
	public static class LetExprContext extends ExprContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public LetExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterLetExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitLetExpr(this);
		}
	}
	public static class StringExprContext extends ExprContext {
		public TerminalNode STRING() { return getToken(ZephyrParser.STRING, 0); }
		public StringExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterStringExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitStringExpr(this);
		}
	}
	public static class IdentExprContext extends ExprContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public IdentExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterIdentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitIdentExpr(this);
		}
	}
	public static class FloatExprContext extends ExprContext {
		public FloatContext float_() {
			return getRuleContext(FloatContext.class,0);
		}
		public FloatExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterFloatExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitFloatExpr(this);
		}
	}
	public static class ForExprContext extends ExprContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public ForExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterForExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitForExpr(this);
		}
	}
	public static class IndexAccessExprContext extends ExprContext {
		public IndexAccessContext indexAccess() {
			return getRuleContext(IndexAccessContext.class,0);
		}
		public IndexAccessExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterIndexAccessExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitIndexAccessExpr(this);
		}
	}
	public static class CodeBlockExprContext extends ExprContext {
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public CodeBlockExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterCodeBlockExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitCodeBlockExpr(this);
		}
	}
	public static class MemberAccessExprContext extends ExprContext {
		public MemberAccessContext memberAccess() {
			return getRuleContext(MemberAccessContext.class,0);
		}
		public MemberAccessExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterMemberAccessExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitMemberAccessExpr(this);
		}
	}
	public static class IfExprContext extends ExprContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public IfExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterIfExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitIfExpr(this);
		}
	}
	public static class CallExprContext extends ExprContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public CallExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterCallExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitCallExpr(this);
		}
	}
	public static class ListExprContext extends ExprContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterListExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitListExpr(this);
		}
	}
	public static class PrefixOpContext extends ExprContext {
		public Token op;
		public ExprContext operand;
		public TerminalNode MINUS_OP() { return getToken(ZephyrParser.MINUS_OP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NOT_OP() { return getToken(ZephyrParser.NOT_OP, 0); }
		public PrefixOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterPrefixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitPrefixOp(this);
		}
	}
	public static class CharExprContext extends ExprContext {
		public TerminalNode CHAR() { return getToken(ZephyrParser.CHAR, 0); }
		public CharExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).enterCharExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZephyrParserListener ) ((ZephyrParserListener)listener).exitCharExpr(this);
		}
	}
	public static class BinaryOpContext extends ExprContext {
		public ExprContext lhs;
		public Token op;
		public ExprContext rhs;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode POWER_OP() { return getToken(ZephyrParser.POWER_OP, 0); }
		public TerminalNode TIMES_OP() { return getToken(ZephyrParser.TIMES_OP, 0); }
		public TerminalNode SLASH() { return getToken(ZephyrParser.SLASH, 0); }
		public TerminalNode MODULUS_OP() { return getToken(ZephyrParser.MODULUS_OP, 0); }
		public TerminalNode PLUS_OP() { return getToken(ZephyrParser.PLUS_OP, 0); }
		public TerminalNode MINUS_OP() { return getToken(ZephyrParser.MINUS_OP, 0); }
		public TerminalNode EQUALS_OP() { return getToken(ZephyrParser.EQUALS_OP, 0); }
		public TerminalNode NOT_EQUALS_OP() { return getToken(ZephyrParser.NOT_EQUALS_OP, 0); }
		public TerminalNode LESS_THAN_OP() { return getToken(ZephyrParser.LESS_THAN_OP, 0); }
		public TerminalNode LESS_THAN_EQUALS_OP() { return getToken(ZephyrParser.LESS_THAN_EQUALS_OP, 0); }
		public TerminalNode GREATER_THAN_OP() { return getToken(ZephyrParser.GREATER_THAN_OP, 0); }
		public TerminalNode GREATER_THAN_EQUALS_OP() { return getToken(ZephyrParser.GREATER_THAN_EQUALS_OP, 0); }
		public TerminalNode AND_OP() { return getToken(ZephyrParser.AND_OP, 0); }
		public TerminalNode OR_OP() { return getToken(ZephyrParser.OR_OP, 0); }
		public TerminalNode IN_OP() { return getToken(ZephyrParser.IN_OP, 0); }
		public TerminalNode NOT_IN_OP() { return getToken(ZephyrParser.NOT_IN_OP, 0); }
